# exocortex

./: README.md  llms.txt  pyproject.toml
plugin/: README.md
plugin/brain-tool/: plugin.yaml
skills/: exobrain.md
src/brain/: __init__.py  cli.py  client.py  commands.py  depth.py  keys.py  profiles.py  retry.py  state.py  stats.py  structured.py
src/exobrain/: commands.py  keys.py
src/exobrain/provider/: reasoning.py
src/exocortex/: __init__.py  cli.py  client.py  commands.py  config.py  keys.py  profiles.py
src/exocortex/provider/: __init__.py  base.py  oa_compat.py  reasoning.py
tests/: test_context.py  test_depth.py  test_keys.py  test_onboarding.py  test_profiles_preamble.py  test_state.py
tests/test_provider/: test_oa_compat.py  test_reasoning.py
