[project]
name = "exobrain-cli"
version = "0.2.6"
description = "ExoBrain CLI — reasoning engine"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.2",
    "openai>=1.0.0",
]

[project.scripts]
exobrain = "exobrain.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line too long — multiline strings & f-strings exceed 100
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.hatch.build.targets.wheel]
packages = ["src/exobrain"]
